Make .well-error's colours less ugly. Fix the missing border.

--- a/public/css/master.less
+++ b/public/css/master.less
@@ -193,11 +193,11 @@ span.paste-title {
 		font-size: 125%;
 	}
 
-	border-color: #444;
+	border: 1px solid #444;
 	background-color: #333;
 	&.well-error {
-		border-color: #500;
-		background-color: #422;
+		border-color: #700;
+		background-color: #400;
 	}
 }
 
